set04/problem04_compile_errors.txt
Compilation started at 11/19/2023, 2:53:09 AM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set04\problem04.c:58:1: error: expected identifier or '(' before '{' token
 {
 ^
Compilation finished at 11/19/2023, 2:53:11 AM
Compilation started at 11/19/2023, 2:53:38 AM
Compilation finished at 11/19/2023, 2:53:42 AM
Compilation started at 11/19/2023, 2:55:59 AM
Compilation finished at 11/19/2023, 2:56:03 AM
Compilation started at 11/19/2023, 2:58:59 AM
Compilation finished at 11/19/2023, 2:59:02 AM
